# src/modules/payments/payment.route.ts
@@ -1,10 +1,8 @@
 import { Router } from 'express';
+import { authorize, protect } from '../../shared/middlewares/auth.middleware';
+import { catchAsync } from '../../shared/utils/catchAsync';
 import { getPaymentHistory } from './payment.controller';
-import { protect, authorize } from '../../shared/middlewares/auth.middleware';
 
 const router = Router();
-
-// Only logged-in users with the 'creator' role can access payment history
-router.get('/history', protect, authorize('creator'), getPaymentHistory);
-
+router.get('/history', protect, authorize('creator'), catchAsync(getPaymentHistory));
 export default router;
